Fixing bad text wrapping in links

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ a.richLink {
     width: 45%;
     -webkit-transition: none 150ms ease;
     transition: none 150ms ease;
+    word-wrap: normal;
     -webkit-transition-property: -webkit-box-shadow, -webkit-transform;
     transition-property: -webkit-box-shadow, -webkit-transform;
     transition-property: box-shadow, transform;
